DRIVERAPP: Dependencies Update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ spring.devtools.restart.enabled = true
 spring.devtools.restart.additional-paths = src/main/java
 openroute.apikey =your_api_key
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+logging.level.root=error
+logging.level.org.springframework.web=debug
+logging.level.org.hibernate=error
+logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){green} %clr([%level]){magenta}  %c{1.} [%t] %m%n
